clusters/home/apps/cloud/kirocrew/namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: kirocrew
  labels:
    goldilocks.fairwinds.com/enabled: "true"
