clusters/home/apps/cloud/kirocrew/ingressroute.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kirocrew
  namespace: kirocrew
  annotations:
    external-dns.kubernetes.io/hostname: "kiro.layertwo.dev"
    external-dns.kubernetes.io/target: "proxy-internal.layertwo.dev"
    layertwo.dev/publish: "internal"
    cert-manager.io/cluster-issuer: letsencrypt-prod-dns
    kubernetes.io/ingress.class: internal
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`kiro.layertwo.dev`)
      kind: Rule
      services:
        - name: kirocrew
          port: 5476
